--- a/SoybeanMilk.html
+++ b/SoybeanMilk.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Restaurant</title>
+	<title>餐馆</title>
+	<meta charset="utf-8">
 </head>
 <body>
 	<h1> Soybean Milk</h1>
